@@ -167,9 +167,6 @@ public class WrappingFilter implements Filter {
         }
         httpServletResponseWrapper = new HttpServletResponseWrapper(httpServletResponse);
 
-        // Create a Session if needed
-        httpServletRequest.getSession(true);
-
         // Set LogProperties
         if (LogProperties.isEnabled()) {
             Props logProperties = LogProperties.getLogProperties();
